--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -37,12 +37,13 @@
     height: 100vh;
     position: fixed;
     top: 0;
-    left: 0;
+    right: 0;
     z-index: 1500;
 
     //set opacity and width to 0 so the elements disapear
     opacity: 0;
     width: 0;
+    visibility: hidden;
     //animate opacity
     transition: all .8s  cubic-bezier(0.68, -0.55, 0.265, 1.55);
 
@@ -99,6 +100,7 @@
   &__checkbox:checked ~ &__nav {
     opacity: 1;
     width: 100%;
+    visibility: visible;
   }
 
   //ICON
